# get-me-out-of-latam-job-scraper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 993dbb59ab79_initial_schema.py  a1b2c3d4e5f6_add_learning_items.py
app/: config.py  database.py  models.py
app/ai/: ats_checker.py  cover_letter.py  embeddings.py  matcher.py  prompts.py  resume_tailor.py  skill_gap.py
app/api/: dependencies.py  main.py  schemas.py
app/api/routes/: ai.py  applications.py  jobs.py  profile.py  sources.py  stats.py
app/sources/: __init__.py  adzuna.py  arbeitnow.py  base.py  himalayas.py  jooble.py  remoteok.py  remotive.py  serpapi_google.py  weworkremotely.py
app/tasks/: applications.py  celery_app.py  collection.py  notifications.py  scoring.py
app/utils/: logger.py  parsers.py
cli/: commands.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: ai.ts  applications.ts  client.ts  jobs.ts  profile.ts  sources.ts  stats.ts
frontend/src/components/ai/: ATSCheckModal.tsx  ApplyWizard.tsx  CoverLetterModal.tsx  MassApplyModal.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/hooks/: useJobSelection.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Applications.tsx  Dashboard.tsx  JobDetail.tsx  Jobs.tsx  Profile.tsx  Sources.tsx
frontend/src/types/: index.ts
scripts/: collect_all.py  init_db.py  seed_profile.py  test_source.py
tests/: conftest.py  test_models.py  test_sources.py
(+8 files in other folders)
